# jetson_gemma

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
globe_bayes/: __init__.py  config.py  narrator.py
globe_bayes/bayes/: __init__.py  make_test_payloads.py  model.py  model_card.py  store.py
globe_bayes/frontend/: __init__.py  webform.py
scripts/: setup_jetson_direct_net.sh
